src/test/deca/context/valid/ContextAvecObjet/New/classAextendsBnewB.deca
// Description:
//    Déclaration d'une classe dans une classe fille
//
// Resultats:
//    ok

class B {}

class A extends B{
    int x;
}

{
    A x = new B();
}