src/test/deca/context/invalid/ContextAvecObjet/New/classeNonDefinie.deca
// Description:
//    Déclaration d'une clsse non définie
//
// Resultats:
//    Erreur contextuelle ligne 9
//    Classe non définie

{
    int x = new A();
}